--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :event_id %><br>
-    <%= f.text_field :event_id %>
+    <%= select("activity", "event_id", Event.all.collect {|e| [ e.name, e.id ] }, {include_blank: 'None'}) %>
   </div>
   <div class="field">
     <%= f.label :vagas %><br>
