--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@activity) do |f| %>
+<%= form_for([@event, @activity]) do |f| %>
   <% if @activity.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@activity.errors.count, "error") %> prohibited this activity from being saved:</h2>
@@ -14,10 +14,6 @@
   <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :event_id %><br>
-    <%= select("activity", "event_id", Event.all.collect {|e| [ e.name, e.id ] }, {include_blank: 'None'}) %>
   </div>
   <div class="field">
     <%= f.label :vagas %><br>
