--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,12 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Activities</h1>
+<h1>Atividades do evento - <%= @event.name %></h1>
 
 <table>
   <thead>
     <tr>
       <th>Name</th>
-      <th>Event</th>
       <th>Vagas</th>
       <th colspan="3"></th>
     </tr>
@@ -16,11 +15,10 @@
     <% @activities.each do |activity| %>
       <tr>
         <td><%= activity.name %></td>
-        <td><%= activity.event.name %></td>
         <td><%= activity.vagas %></td>
-        <td><%= link_to 'Show', activity %></td>
-        <td><%= link_to 'Edit', edit_activity_path(activity) %></td>
-        <td><%= link_to 'Destroy', activity, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', event_activity_path(@event, activity) %></td>
+        <td><%= link_to 'Edit', edit_event_activity_path(@event, activity) %></td>
+        <td><%= link_to 'Destroy', event_activity_path(@event, activity), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,5 +26,5 @@
 
 <br>
 
-<%= link_to 'New Activity', new_activity_path %>
+<%= link_to 'New Activity', new_event_activity_path(@event) %>
 <p><%= link_to "Inicio", root_path %></p>
