--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Activity</h1>
+<h1><%= @event.name %></h1>
+<h2>New Activity</h2>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', activities_path %>
+<%= link_to 'Back', event_activities_path(@event) %>
