Adicionado campo status no modelo registrations. (Atualizadas as views e controller)

--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -24,6 +24,10 @@
     <%= f.label :activity_id %><br>
     <%= f.text_field :activity_id %>
   </div>
+  <div class="field">
+    <%= f.label :status %><br>
+    <%= f.text_field :status %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
