--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -7,6 +7,8 @@
     <tr>
       <th>User</th>
       <th>Event</th>
+      <th>Activity</th>
+      <th>Status</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,8 +16,10 @@
   <tbody>
     <% @registrations.each do |registration| %>
       <tr>
-        <td><%= registration.user %></td>
-        <td><%= registration.event %></td>
+        <td><%= registration.user.name %></td>
+        <td><%= registration.event.name %></td>
+        <td><%= registration.activity.name %></td>
+        <td><%= registration.status %></td>
         <td><%= link_to 'Show', registration %></td>
         <td><%= link_to 'Edit', edit_registration_path(registration) %></td>
         <td><%= link_to 'Destroy', registration, method: :delete, data: { confirm: 'Are you sure?' } %></td>
