Adicionado Bootstrap e página inicial

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -22,6 +22,7 @@
         <td><%= link_to 'Edit', edit_event_path(event) %></td>
         <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <td><%= link_to 'Ver Programação', event_activities_path(event)%></td>
+        <td><%= link_to 'Fazer inscrição', new_event_registration_path(event) %></td>
       </tr>
     <% end %>
   </tbody>
