--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,5 @@
-<h1>Bem Vindo ao Sistema de Eventus</h1>
-<p><%= link_to "Eventos", events_path %></p>
-<p><%= link_to "Usuários", users_path %></p>
+<div class="jumbotron center">
+	<h1>Welcome to Eventus</h1>
+	<h2>A Ruby on Rails app For Events management</h2>
+	<%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
