--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@registration) do |f| %>
+<%= form_for([@event, @registration]) do |f| %>
   <% if @registration.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@registration.errors.count, "error") %> prohibited this registration from being saved:</h2>
@@ -15,14 +15,10 @@
     <%= f.label :user_id %><br>
     <%= f.text_field :user_id %>
   </div>
-  <div class="field">
-    <%= f.label :event_id %><br>
-    <%= f.text_field :event_id %>
-    <%=%>
-  </div>
+
   <div class="field">
     <%= f.label :activity_id %><br>
-    <%= f.text_field :activity_id %>
+    <%= select("registration", "activity_id", @event.activities.collect {|a| [ a.name, a.id ] }, {prompt: 'Select Activity'}) %>
   </div>
   <div class="field">
     <%= f.label :status %><br>
