--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New Registration</h1>
+<h2><%= @event.name %></h2>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', registrations_path %>
+<%= link_to 'Back', event_registrations_path(@event) %>
