fazendo meu proprio sistema de login

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron center">
 	<h1>Welcome to Eventus</h1>
 	<h2>A Ruby on Rails app For Events management</h2>
-	<%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+	<%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
